# gp-tools

./: .gitignore  README.md  test_watch_etf.py  watch_etf.py
a_share_quant_research/: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  PLANS.md  README.md  pyproject.toml
a_share_quant_research/.agents/skills/a-share-daily-research/: SKILL.md
a_share_quant_research/.cache/news-evidence-gate/600118/: evidence_pack.json  evidence_pack.md
a_share_quant_research/.cache/news-evidence-gate/600664/: evidence_pack.json  evidence_pack.md
a_share_quant_research/.cache/news-evidence-gate/600667/: evidence_pack.json  evidence_pack.md
a_share_quant_research/.cache/news-evidence-gate/600685/: evidence_pack.json  evidence_pack.md
a_share_quant_research/.cache/news-evidence-gate/600879/: evidence_pack.json  evidence_pack.md
a_share_quant_research/.cache/news-evidence-gate/601698/: evidence_pack.json  evidence_pack.md
a_share_quant_research/config/: backtest.yaml  factors.yaml  providers.yaml  quality.yaml  universe.yaml
a_share_quant_research/docs/superpowers/plans/: 2026-07-12-a-share-quant-research.md
a_share_quant_research/src/a_share_research/: __init__.py  cli.py  pipeline.py  settings.py
a_share_quant_research/tests/data_quality/: test_gate.py  test_pipeline_blocking.py
a_share_quant_research/tests/integration/: test_daily_pipeline.py  test_docs_commands.py  test_skill_contract.py
a_share_quant_research/tests/no_lookahead/: test_backtest.py
a_share_quant_research/tests/unit/: test_cli.py  test_cli_commands.py  test_settings.py  test_stage_artifacts.py
(+190 files in other folders)
