[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-quant-research"
version = "0.1.0"
description = "Fail-closed, traceable, low-frequency A-share research system"
requires-python = ">=3.11,<3.14"
dependencies = [
  "akshare>=1.18.0",
  "duckdb>=1.4.0",
  "httpx>=0.28.0",
  "pandas>=2.2.0",
  "pyarrow>=18.0.0",
  "pydantic>=2.10.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.9.0"]

[project.scripts]
a-share-research = "a_share_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
